smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace-before-shapes.smithy
// Parse error at line 2, column 1 near `string`: A namespace must be set before shapes or traits can be defined
string MyString
